# quickmark

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  file.rs  lib.rs  main.rs
