[package]
name = "quickmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
rayon = "1.10.0"


[[bin]]
name = "qm"
path = "src/main.rs"
