[package]
name = "quickmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.4.0"
webbrowser = "1.0.1"


[[bin]]
name = "qm"
path = "src/main.rs"
